--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 
 <head>
     <meta charset="UTF-8" />
@@ -7,8 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM - Perfil</title>
 
+    
     <link rel="stylesheet" href="./assets/design.css" />
+    <script src="./assets/js/cliente.js"></script>
+    <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
 </head>
+
 
 <body>
     <nav id="header" class="navbar">
@@ -16,16 +20,17 @@
             <button id="button-img" type="button" class="secondary">
                <img src="./assets/images/perfill.png" alt="" />
             </button>
-            <h4>Olá, Pessoa!</h4>
+            <h3>  Olá, Pessoa!  </h3>
+
         </div>
       </nav>
       <div class="row">
         <div id="aside" class="col-2">
           <ul id="ul-aside" class="list-group">
-            <li><a class="list-group-item" href="">Home</a></li>
-            <li><a class="list-group-item" href="">Perfil</a></li>
-            <li><a class="list-group-item" href="">Favoritos</a></li>
-            <li><a class="list-group-item" href="">Conversas</a></li>
+            <li><a class="list-group-item" href=""> Home </a></li>
+            <li><a class="list-group-item" href=""> Perfil </a></li>
+            <li><a class="list-group-item" href=""> Favoritos </a></li>
+            <li><a class="list-group-item" href=""> Conversas </a></li>
           </ul>
         </div>
             <div id="div-perfil" class="col-10">
@@ -34,6 +39,7 @@
                   <h4>Perfil</h4>
                 </div>
               </nav>
+
               <div class="row">
                 <div id="col-perfil" class="col-3">
                   <button id="button-redondo" type="button" class="secondary">
@@ -42,59 +48,61 @@
                 </div>
                 <div id="col-perfil" class="col-3">
                   <h4>Dados gerais:</h4>
-                  <h5>__________________</h5>
+                  <h5>_____________________</h5>
                 </div>
                 <div id="col-perfil" class="col-3">
                   <h4>Documentos:</h4>
-                  <h5>CPF: ____________</h5>
-                  <h5>RG: ___________</h5>
+                  <h5>CPF: _______________</h5>
+                  <h5>RG: ______________</h5>
                 </div>
                 <div id="col-perfil" class="col-3">
                   <h4>Contato:</h4>
-                  <h5>CEL: _____________</h5>
-                  <h5>FIXO: ____________</h5>
+                  <h5>CEL: ________________</h5>
+                  <h5>FIXO: _______________</h5>
                 </div>
               </div>
+
               <nav id="nav-dados" class="navbar">
                 <div class="container-fluid">
-                  <h4>Dados gerais</h4>
+                  <h4>   Dados gerais   </h4>
                 </div>
               </nav>
+
               <form>
                 <div class="row">
                   <div id="col-form" class="col-4">
-                    <label><b>Nome</b></label>
+                    <label><b> Nome</b></label>
                     <input type="text" />
-                    <label><b>Telefone (celular)</b></label>
-                    <input type="tel" />
+                    <label><b> Telefone(celular) </b></label>
+                    <input type="number" />
                   </div>
                   <div id="col-form" class="col-4">
-                    <label><b>CPF</b></label>
+                    <label><b> CPF</b></label>
                     <input type="text" />
-                    <label><b>Telefone (fixo)</b></label>
-                    <input type="tel" />
+                    <label><b> Telefone(fixo) </b></label>
+                    <input type="number" />
                   </div>
                   <div id="col-form" class="col-4">
-                    <label><b>RG</b></label>
+                    <label><b> RG</b></label>
                     <input type="text" />
-                    <label><b>E-mail</b></label>
+                    <label><b> E- mail </b></label>
                     <input type="email" />
                   </div>
                 </div>
               </form>
+
               <nav id="nav-submit" class="navbar">
                 <div class="container-fluid">
-                  <button id="btn-limpar" type="button" class="btn btn-secondary">
-                    <b>Limpar</b>
+                  <button id="limpar" type="submit" class="btn-limpar">
+                       <b> Limpar </b>
                   </button>
-                  <button id="btn-salvar" type="button" class="btn btn-primary">
-                    <b>Salvar</b>
+                  <button id="salvar" type="submit" class="btn-salvar">
+                       <b> Salvar </b>
                   </button>
                 </div>
               </nav>
+
             </div>
           </div>
-      
-          <script src="/assets/bootstrap/bootstrap.bundle.min.js"></script>
         </body>
       </html>
